<?xml version="1.0" encoding="utf-8"?>

     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_name_label"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText
        android:id="@+id/switch_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/switch_name_hint"
        android:inputType="text"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_configuration_label"
        style="?android:listSeparatorTextViewStyle"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_hardwareid_label"
            />
        <AutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch_hardwareid"
        	android:hint="@string/switch_hardwareid_hint"
            android:inputType="text"/>
    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_inverted"
        style="?android:textViewStyle"
        android:textStyle="normal"
        android:textColor="@android:color/secondary_text_dark"
        android:id="@+id/switch_inverted"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textOn="@string/switch_inverted"
        android:textOff="@string/switch_normal"
        android:layout_gravity="left|center_vertical"
        android:clickable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_pulse_label"
            />
        <EditText
            android:id="@+id/switch_pulse"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:hint="@string/switch_pulse_hint"
            android:inputType="number"/>
    </LinearLayout>


</LinearLayout>